temp/sph/vi
In file included from src/main.cpp:2:
include/struct.hpp:8:1: warning: ‘typedef’ was ignored in this declaration
    8 | typedef struct point
      | ^~~~~~~
In file included from src/main.cpp:6:
include/simulate.hpp: In function ‘void JD::simulate::computeDensity(int*, int*, int*, floater*, float)’:
include/simulate.hpp:34:53: error: ‘p_indices’ is not a member of ‘JD::graphics’ [-Wtemplate-body]
   34 |                     int floater_idx = JD::graphics::p_indices[idx_o + k];
      |                                                     ^~~~~~~~~
include/simulate.hpp:39:25: error: ‘r’ was not declared in this scope [-Wtemplate-body]
   39 |                     if (r < h_in) temp += p_floatersA[j].mass * KernelFunc(r, h_in);
      |                         ^
include/simulate.hpp: In function ‘void JD::simulate::integrate(int*, int*, int*, floater*)’:
include/simulate.hpp:112:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
  112 |         for (int i = 0; i < FLOATER_AMT; i++) {
      |                         ~~^~~~~~~~~~~~~
include/simulate.hpp: In instantiation of ‘void JD::simulate::computeDensity(int*, int*, int*, floater*, float) [with auto KernelFunc = JD::Poly6_k::smoothing]’:
src/main.cpp:25:57:   required from here
   25 |     JD::simulate::computeDensity<JD::Poly6_k::smoothing>(JD::graphics::offsets, JD::graphics::cells_ctr, JD::graphics::particles_loc, JD::floaters::floatersA, PARTICLE_SIZE);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/simulate.hpp:23:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
   23 |         for (int i = 0; i < FLOATER_AMT; i++) {
      |                         ~~^~~~~~~~~~~~~
include/simulate.hpp:37:27: warning: unused variable ‘dist_sq’ [-Wunused-variable]
   37 |                     float dist_sq = dx*dx + dy*dy;
      |                           ^~~~~~~
include/simulate.hpp: In instantiation of ‘void JD::simulate::computePressureForce(int*, int*, int*, floater*, float) [with auto KernelGrad = JD::Spiky_k::gradient]’:
src/main.cpp:26:62:   required from here
   26 |     JD::simulate::computePressureForce<JD::Spiky_k::gradient>(JD::graphics::offsets, JD::graphics::cells_ctr, JD::graphics::particles_loc, JD::floaters::floatersA, PARTICLE_SIZE);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/simulate.hpp:57:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
   57 |         for (int i = 0; i < FLOATER_AMT; i++) {
      |                         ~~^~~~~~~~~~~~~
include/simulate.hpp:58:31: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
   58 |             for (int j = 0; j < FLOATER_AMT; j++) {
      |                             ~~^~~~~~~~~~~~~
include/simulate.hpp: In instantiation of ‘void JD::simulate::applyYAccelerationToAllParticles(floater*) [with auto function = JD::gravity::gravityAcceleration]’:
src/main.cpp:27:85:   required from here
   27 |     JD::simulate::applyYAccelerationToAllParticles<JD::gravity::gravityAcceleration>(JD::floaters::floatersA);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
include/simulate.hpp:101:26: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
  101 |         for(int i = 0; i < FLOATER_AMT; i++)
      |                        ~~^~~~~~~~~~~~~
include/simulate.hpp: In instantiation of ‘void JD::simulate::computeViscosity(int*, int*, int*, floater*, float) [with auto KernelLap = JD::Viscosity_k::laplacian]’:
src/main.cpp:28:63:   required from here
   28 |     JD::simulate::computeViscosity<JD::Viscosity_k::laplacian>(JD::graphics::offsets, JD::graphics::cells_ctr, JD::graphics::particles_loc, JD::floaters::floatersA, PARTICLE_SIZE);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/simulate.hpp:81:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
   81 |         for (int i = 0; i < FLOATER_AMT; i++) {
      |                         ~~^~~~~~~~~~~~~
include/simulate.hpp:82:31: warning: comparison of integer expressions of different signedness: ‘int’ and ‘const size_t’ {aka ‘const long unsigned int’} [-Wsign-compare]
   82 |             for (int j = 0; j < FLOATER_AMT; j++) {
      |                             ~~^~~~~~~~~~~~~
make: *** [Makefile:37: obj/main.o] Error 1
